<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Clementine Remote</string>
    <string name="app_not_available">App not available!</string>
    <string name="connectdialog_connect">Connect</string>
    <string name="connectdialog_connecting">Connecting to Clementine</string>
    <string name="connectdialog_download_data">Downloading data</string>
    <string name="connectdialog_error">Could not reach host</string>
    <string name="connectdialog_ip_hint">Enter IP address</string>
    <string name="connect_intro">Pick the Clementine you want to control. It needs to be on the same Wi-Fi as this phone.</string>
    <string name="connect_on_network">On your network</string>
    <string name="connect_search_again">Search again</string>
    <string name="connect_searching">Looking for Clementine…</string>
    <string name="connect_searching_help">Not showing up? Check that its network remote is turned on, or enter its address below.</string>
    <string name="connect_server_address">%1$s · port %2$d</string>
    <string name="connect_not_searching">Not looking on this network</string>
    <string name="connect_not_searching_help">Without the Nearby devices permission, Clementine Remote can\'t find Clementine on your network. Enter its address below, or turn the permission on.</string>
    <string name="connect_enter_address">Or enter its address</string>
    <string name="connect_address">Address</string>
    <string name="connect_requirements">Needs Clementine %1$s or later, with Tools → Preferences → Network Remote turned on.</string>
    <string name="player_nosong">No Song playing right now</string>
    <string name="player_disconnected">Disconnected</string>
    <string name="playler_volume">Volume</string>
    <string name="player_stop_after_current">Toggle stopping after track finishes.</string>
    <string name="player_download_lyrics">Downloading lyrics</string>
    <string name="player_no_lyrics">No lyrics found.</string>
    <string name="player_download_started">Download started!</string>
    <string name="player_song_is_stream">Cannot download streams!</string>
    <string name="player_stream">[S]</string>
    <string name="playlist_search_hint">Search track</string>
    <string name="playlist_empty">Playlist is empty!</string>
    <string name="playlist_context_play">Play item</string>
    <string name="playlist_context_remove">Remove from playlist</string>
    <string name="playlist_close">Close playlist</string>
    <string name="playlist_clear">Clear playlist</string>
    <string name="playlist_clear_content">This will irretrievably remove all songs from the playlist. Continue?</string>
    <string name="playlist_clear_confirm">Clear playlist</string>
    <plurals name="queue_songs">
        <item quantity="one">%d song</item>
        <item quantity="other">%d songs</item>
    </plurals>
    <string name="queue_minutes">%d min</string>
    <string name="queue_hours_minutes">%1$d h %2$d min</string>
    <plurals name="queue_selected">
        <item quantity="one">%d selected</item>
        <item quantity="other">%d selected</item>
    </plurals>
    <string name="queue_clear_selection">Clear selection</string>
    <string name="downloads_empty">Nothing downloaded yet</string>
    <string name="downloads_empty_summary">Download music to this phone to listen to it away from Clementine.</string>
    <string name="downloads_empty_how">Download a song from the player, an album from the library, or a playlist from its menu.</string>
    <string name="downloads_suggest_most_played">Your most played albums</string>
    <string name="downloads_suggest_recent">Recently added albums</string>
    <string name="downloads_suggest_playlists">Playlists</string>
    <plurals name="downloads_plays">
        <item quantity="one">%d play</item>
        <item quantity="other">%d plays</item>
    </plurals>
    <string name="downloads_playlist_playing">Playing now</string>
    <string name="downloads_playlist_favorite">Favourite</string>
    <string name="downloads_download">Download %1$s</string>
    <string name="downloaded_songs">Downloaded songs - click to play</string>
    <string name="downloads_title">Downloads</string>
    <string name="downloads_free_space">%s free on this phone</string>
    <string name="downloads_running">Downloading</string>
    <string name="downloads_finished">Finished</string>
    <string name="downloads_on_phone">On this phone</string>
    <string name="downloads_wifi_only">Downloads only run on Wi-Fi.</string>
    <string name="downloads_change">Change</string>
    <string name="nav_queue">Queue</string>
    <string name="shell_open_player">Open player: %s</string>
    <string name="shell_connected_to">Connected to %s</string>
    <string name="shell_search_close">Close search</string>
    <string name="shell_more">More options</string>
    <string name="player_collapse">Collapse player</string>
    <string name="player_playing_from">Playing from</string>
    <string name="queue_playing">Playing</string>
    <string name="player_love">Love on Last.fm</string>
    <string name="player_details">Lyrics and details</string>
    <string name="player_download_song">Download song</string>
    <string name="player_volume_level">Clementine volume, %1$d%%</string>
    <string name="player_volume_up">Volume up</string>
    <string name="player_volume_down">Volume down</string>
    <string name="details_tab">Details</string>
    <string name="lyrics_tab">Lyrics</string>
    <string name="connection_connected">Connected</string>
    <string name="connection_uptime">Connected for</string>
    <string name="connection_switch">Switch Clementine</string>
    <string name="connection_switch_summary">Pick another computer on your network</string>
    <string name="output_title">Play on</string>
    <string name="output_this_phone">%1$s (this phone)</string>
    <string name="output_this_tablet">%1$s (this tablet)</string>
    <string name="output_switching">Switching…</string>
    <string name="output_playing_on">Playing on %1$s</string>
    <string name="output_choose">Choose where to play</string>
    <string name="hint_done">Got it</string>
    <string name="hint_outputs_title">Play on this device</string>
    <string name="hint_outputs">Listen to Clementine on this device, or switch back to your computer, with this button.</string>
    <string name="pref_hints_reset">Show tips again</string>
    <string name="pref_hints_reset_summary">Point out features again, as on first use</string>
    <string name="pref_hints_reset_done">Tips will show again</string>
    <string name="pref_renderer">Let Clementine play on this phone</string>
    <string name="pref_renderer_summary">Clementine can send its music here, when it plays on other devices</string>
    <string name="download_noti_title">Starting download</string>
    <plurals name="download_noti_n_downloads">
        <item quantity="one">%d active download</item>
        <item quantity="other">%d active downloads</item>
    </plurals>
    <string name="download_noti_n_progress">Total progress: %d %</string>
    <string name="download_noti_title_song">[Song]</string>
    <string name="download_noti_title_album">[Album]</string>
    <string name="download_noti_title_playlist">[Playlist]</string>
    <string name="download_noti_title_songs">[Songs]</string>
    <plurals name="download_noti_n_finished">
        <item quantity="one">%d download finished</item>
        <item quantity="other">%d downloads finished</item>
    </plurals>
    <string name="download_noti_complete">Download complete</string>
    <string name="download_noti_canceled">Download canceled</string>
    <string name="download_noti_insufficient_space">Insufficient space, aborting download.</string>
    <string name="download_noti_forbidden">Download forbidden. Activate in Clementine settings.</string>
    <string name="download_noti_not_local_network">Clementine only accepts connections from its local network.</string>
    <string name="download_noti_too_many_wrong_auth_codes">Too many wrong auth codes. Clementine won\'t check another from this phone for %s.</string>
    <string name="download_noti_not_mounted">No storage device found!</string>
    <string name="download_noti_only_wifi">Download only on wifi allowed.</string>
    <string name="download_noti_transcoding">Transcoding files</string>
    <string name="download_noti_transcoding_subtitle">Please wait</string>
    <string name="library_syncing">Syncing the library from Clementine</string>
    <string name="library_optimize">Optimizing database</string>
    <string name="library_empty">The library isn\'t on this phone yet. Pull down to sync it from Clementine.</string>
    <string name="library_no_search_results">No songs matching your search criteria!</string>
    <string name="library_sync_error">Could not sync the library</string>
    <string name="library_title">Library</string>
    <string name="menu_search">Search</string>
    <string name="menu_download_playlist">Download playlist</string>
    <string name="pref_cat_player">Player</string>
    <string name="pref_cat_downloads">Downloads</string>
    <string name="pref_volume_title">Use Volume Keys</string>
    <string name="pref_volume_summary">Use volume keys to control the volume of Clementine.</string>
    <string name="pref_trackno_title">Show tracknumber</string>
    <string name="pref_trackno_summary">Show or hide the tracknumber in the playlists.</string>
    <string name="pref_lastfm_title">Last.fm</string>
    <string name="pref_lastfm_summary">Activate to love / ban tracks.</string>
    <string name="pref_lower_volume_title">Lower volume</string>
    <string name="pref_lower_volume_summary">Lower volume on incoming / outgoing call.</string>
    <string name="pref_call_volume_title">Call volume level</string>
    <string name="pref_call_volume_summary">Current call volume level: %s</string>
    <string name="pref_volume_inc_title">Volume change level</string>
    <string name="pref_volume_inc_summary">Current volume change level : %s</string>
    <string name="pref_dl_wifi_only_title">WiFi only</string>
    <string name="pref_dl_wifi_only_summary">Download songs only when connected to a wifi network.</string>
    <string name="pref_dl_dir">Set download folder</string>
    <string name="pref_dl_override">Override existing files</string>
    <string name="pref_dl_cat_folders">Folders</string>
    <string name="pref_dl_pl_save_own_dir_title">Save tracks in playlist folder</string>
    <string name="pref_dl_pl_save_own_dir_summary">Creates a playlist-named folder and saves tracks in there.</string>
    <string name="pref_dl_pl_artist_dir_title">Create artist subfolder</string>
    <string name="pref_dl_pl_artist_dir_summary">Create a artist subfolder for each individual track.</string>
    <string name="pref_dl_pl_album_dir_title">Create album subfolder</string>
    <string name="pref_dl_pl_album_dir_summary">Create a album subfolder inside artist for each individual track.</string>
    <string name="dialog_about_authors">Authors</string>
    <string name="dialog_about_supporters">Supporters</string>
    <string name="dialog_about_others">Others</string>
    <string name="tasker_intro">Please select an action.</string>
    <string name="tasker_ip_help">Enter the details you want to connect to if you selected \"Connect\" above. Auth code is optional if disabled in Clementine.</string>
    <string name="tasker_connect">Connect</string>
    <string name="tasker_disconnect">Disconnect</string>
    <string name="tasker_play">Play</string>
    <string name="tasker_pause">Pause</string>
    <string name="tasker_playpause">Play / Pause</string>
    <string name="tasker_stop">Stop</string>
    <string name="tasker_next">Next song</string>
    <string name="tasker_port_hint">Enter port</string>
    <string name="tasker_auth_hint">Enter auth code</string>
</resources>