<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/pref_cat_player">
    <CheckBoxPreference
            android:key="pref_volumekey"
            android:title="@string/pref_volume_title"
            android:summary="@string/pref_volume_summary"
            android:defaultValue="true"/>
    <CheckBoxPreference
            android:key="pref_show_trackno"
            android:title="@string/pref_trackno_title"
            android:summary="@string/pref_trackno_summary"
            android:defaultValue="true"/>
    <CheckBoxPreference
            android:key="pref_show_lastfm"
            android:title="@string/pref_lastfm_title"
            android:summary="@string/pref_lastfm_summary"
            android:defaultValue="true"/>
    <CheckBoxPreference
            android:key="pref_lower_volume"
            android:title="@string/pref_lower_volume_title"
            android:summary="@string/pref_lower_volume_summary"
            android:defaultValue="true"/>
    <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:key="pref_call_volume"
            android:title="@string/pref_call_volume_title"
            android:summary="@string/pref_call_volume_summary"
            android:entries="@array/pref_volume_display"
            android:entryValues="@array/pref_volume_values"
            android:defaultValue="20"
            android:dependency="pref_lower_volume"/>
    <com.afollestad.materialdialogs.prefs.MaterialListPreference
            android:key="pref_volume_inc"
            android:title="@string/pref_volume_inc_title"
            android:summary="@string/pref_volume_inc_summary"
            android:entries="@array/pref_volume_inc_display"
            android:entryValues="@array/pref_volume_inc_values"
            android:defaultValue="10"/>
</PreferenceScreen>