<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/playlist_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:icon="@drawable/ab_search"
        app:showAsAction="collapseActionView|always"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/download_playlist"
        android:title="@string/menu_download_playlist"
        android:icon="@drawable/ab_download_playlist"
        app:showAsAction="ifRoom" />
    <item
            android:id="@+id/close_playlist"
            android:title="@string/playlist_close"
            android:icon="@drawable/ab_delete"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/clear_playlist"
            android:title="@string/playlist_clear"
            android:icon="@drawable/ab_ban"
            app:showAsAction="ifRoom" />
</menu>