<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_background"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:background="@drawable/white_background"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:gravity="center_horizontal"
                android:text="@string/tasker_intro"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radio_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/tasker_connect"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_disconnect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/tasker_disconnect"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_play"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/tasker_play"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_pause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/tasker_pause"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_playpause"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/tasker_playpause"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_stop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/tasker_stop"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/tasker_next"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/tasker_ip_help"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/tasker_ip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="6dp"
                android:background="@drawable/edittext_orange_boarder"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/connectdialog_ip_hint"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/tasker_port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="6dp"
                android:background="@drawable/edittext_orange_boarder"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/tasker_port_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

            <EditText
                android:id="@+id/tasker_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginBottom="6dp"
                android:background="@drawable/edittext_orange_boarder"
                android:ems="10"
                android:gravity="center_vertical|center_horizontal"
                android:hint="@string/tasker_auth_hint"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textCursorDrawable="@null" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>